--- a/Html Css/09 - animaciones y tranciciones/style.css
+++ b/Html Css/09 - animaciones y tranciciones/style.css
@@ -1,7 +1,20 @@
+body {
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.btn-modern {
+    padding: 10px 20px;
+    transition: all 0.4s;
+    cursor: pointer;
+    border: none;
+    border-radius: 5px;
+
+}
 .btn-modern:hover {
+    color: burlywood;
     transform: translateY(-5px);
     box-shadow: black 3px 3px 10px 0px;
     background-color: bisque;
-    color: burlywood;
-    transition: 0.4s;
 }
